Animaciones agregadas y clases cambiadas 9/4/22

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <div class="contactDiv">
                 <h2 class="contactDiv__title">Lorem, ipsum.</h2>
                 <p class="contactDiv__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
-                <img class="contactDiv__img" src="Images/contactsample.jpg" alt="contactsample">
+                <img class="contactDiv__img hover__img" src="Images/contactsample.jpg" alt="contactsample">
             </div>
             <!-- Form -->
             <div class="mainForm">
