--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="mainIndex__text mainIndex__text--p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
                 <p class="mainIndex__text mainIndex__text--p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
             </div>
-            <div class="mainIndex__image">
+            <div class="mainIndex__image hover__img">
                 <img class="mainIndex__image--img" src="Images/indexsample.jpg" alt="indexsample">
             </div>
         </main>
