--- a/nosotros.html
+++ b/nosotros.html
@@ -36,22 +36,22 @@
         <!-- main -->
         <main class="mainNosotros">
             <div class="mainNosotros__hombre mainNosotros__hombre--1">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--1" src="Images/hombre1.jpg" alt="hombre1"></a>
-                <div class="mainNosotros__textContainer">
+                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="hombre1"></a>
+                <div class="mainNosotros__textContainer mainNosotros__textContainer--1">
                     <h3 class="mainNosotros__title mainNosotros__title1">Lorem, ipsum.</h3>
                     <p class="mainNosotros__p mainNosotros__p--1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                 </div>
             </div>
             <div class="mainNosotros__hombre mainNosotros__hombre--2">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--2" src="Images/hombre2.jpg" alt="hombre2"></a>
-                <div class="mainNosotros__textContainer">
+                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="hombre2"></a>
+                <div class="mainNosotros__textContainer mainNosotros__textContainer--2">
                     <h3 class="mainNosotros__title mainNosotros__title--2">Lorem, ipsum.</h3>
                     <p class="mainNosotros__p mainNosotros__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                 </div>
             </div>
             <div class="mainNosotros__hombre mainNosotros__hombre--3">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--3 " src="Images/hombre3.jpg" alt="hombre3"></a>
-                <div class="mainNosotros__textContainer">
+                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="hombre3"></a>
+                <div class="mainNosotros__textContainer mainNosotros__textContainer--3">
                     <h3 class="mainNosotros__title mainNosotros__title--3">Lorem, ipsum.</h3>
                     <p class="mainNosotros__p mainNosotros__p--3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                 </div>
