--- a/prestadores.html
+++ b/prestadores.html
@@ -38,20 +38,20 @@
         <div class=mainPrestadores__div>
             <div class="textConteiner__prestadores">
                 <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
-                <p class="mainPrestadores__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                <ul class="mainPrestadores__ul">
+                <p class="mainPrestadores__p mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                <ul class="mainPrestadores__ul mainPrestadores__ul--1">
                     <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet.</li>
                     <li class="mainPrestadores__li--link">Lorem, ipsum dolor sit amet consectetur.</li>
                     <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet.</li>
                 </ul>
-                <p class="mainPrestadores__p mainPrestadores__p--bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                <ul class="mainPrestadores__ul">
+                <p class="mainPrestadores__p mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
+                <ul class="mainPrestadores__ul mainPrestadores__ul--2">
                     <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet consectetur.</li>
                     <li class="mainPrestadores__li--link">Lorem ipsum dolor sit.</li>
                     <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
                 </ul> 
             </div>    
-            <img class="mainPrestadores__img" src="Images/hospital.jpg" alt="hospital">
+            <img class="mainPrestadores__img hover__img" src="Images/hospital.jpg" alt="hospital">
         </div>
     </main>
     <!-- Footer -->
