--- a/index.html
+++ b/index.html
@@ -9,53 +9,59 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="gridContainer">
-        <!-- Header -->
-        <header>
-            <div class="header__container">
-                <div class= topHeader>
-                    <a class="topHeader__logo" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                    <h1 class="topHeader__title">Mifar</h1>
+    <div class="container-fluid">
+        <div class="gridContainer">
+            <!-- Header -->
+            <header>
+                <div class="header__container">
+                    <div class= topHeader>
+                        <a class="topHeader__logo" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                        <h1 class="topHeader__title">Mifar</h1>
+                    </div>
+                    <div class="platformAccess">
+                        <button class="platformButton">Acceso a la plataforma</button>  
+                    </div>
                 </div>
-                <div class="platformAccess">
-                    <button class="platformButton">Acceso a la plataforma</button>  
+                <nav>
+                    <ul class="navList">
+                        <li class="nav__link"><a class="nav__link--index" href="index.html">Home</a></li>
+                        <li class="nav__link"><a class="nav__link--prestadores" href="prestadores.html">Prestadores</a></li>
+                        <li class="nav__link"><a class="nav__link--asociarse" href="asociarse.html">Asociarse</a></li>
+                        <li class="nav__link"><a class="nav__link--nosotros" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav__link"><a class="nav__link--contact" href="contact.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <!-- Main -->
+            <main class="mainIndex">
+                <div class="mainIndex__text">
+                    <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
+                    <p class="mainIndex__text mainIndex__text--p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                    <p class="mainIndex__text mainIndex__text--p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
                 </div>
-            </div>
-            <nav>
-                <ul class="navList">
-                    <li class="nav__link"><a class="nav__link--index" href="index.html">Home</a></li>
-                    <li class="nav__link"><a class="nav__link--prestadores" href="prestadores.html">Prestadores</a></li>
-                    <li class="nav__link"><a class="nav__link--asociarse" href="asociarse.html">Asociarse</a></li>
-                    <li class="nav__link"><a class="nav__link--nosotros" href="nosotros.html">Nosotros</a></li>
-                    <li class="nav__link"><a class="nav__link--contact" href="contact.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-        <!-- Main -->
-        <main class="mainIndex">
-            <div class="mainIndex__text">
-                <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
-                <p class="mainIndex__text mainIndex__text--p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                <p class="mainIndex__text mainIndex__text--p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
-            </div>
-            <div class="mainIndex__image hover__img">
-                <img class="mainIndex__image--img" src="Images/indexsample.jpg" alt="indexsample">
-            </div>
-        </main>
-        <!-- Footer -->
-        <footer>
-            <div class="footerText">
-                <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
-                <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
-            </div>
-            <div class="footerRedes">
-                <a class="footerRedesLink footerRedesLink__instagram" href="https://instagram.com" target="_blank"><img src="Images/instagramlogo.svg" alt="Instagram"></a>
-                <a class="footerRedesLink footerRedesLink__twitter" href="https://twitter.com" target="_blank"><img src="Images/twitterlogo.svg" alt="Twitter"></a>
-                <a class="footerRedesLink footerRedesLink__facebook" href="https://facebook.com" target="_blank"><img src="Images/facebooklogo.svg" alt="Facebook"></a>
-            </div>
-        </footer>
+                <div class="mainIndex__image hover__img">
+                    <img class="mainIndex__image--img" src="Images/indexsample.jpg" alt="indexsample">
+                </div>
+            </main>
+            <!-- Footer -->
+            <footer>
+                <div class="footerText">
+                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
+                </div>
+                <div class="footerRedes">
+                    <a class="footerRedesLink footerRedesLink__instagram" href="https://instagram.com" target="_blank"><img src="Images/instagramlogo.svg" alt="Instagram"></a>
+                    <a class="footerRedesLink footerRedesLink__twitter" href="https://twitter.com" target="_blank"><img src="Images/twitterlogo.svg" alt="Twitter"></a>
+                    <a class="footerRedesLink footerRedesLink__facebook" href="https://facebook.com" target="_blank"><img src="Images/facebooklogo.svg" alt="Facebook"></a>
+                </div>
+            </footer>
+        </div>
+        <!-- Bootstrap Link JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </div>
 </body>
 </html>
