--- a/contact.html
+++ b/contact.html
@@ -5,36 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/Mifar/Images/favicon.jpg" type="image/x-icon">
+    <!-- Css Comentado -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="gridContainer">
-        <!-- Header -->
-        <header>
-            <div class="header__container">
-                <div class= topHeader>
-                    <a class="topHeader__logo" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                    <h1 class="topHeader__title">Mifar</h1>
+    <div class="container-fluid">
+        <div class="container">
+            <!-- Header -->
+            <header>
+                <div class="row">
+                    <div class= "col">
+                        <a class="p-16px" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                        <h1 class="topHeader__title">Mifar</h1>
+                    </div>
+                    <div class="col d-flex align-items-center d-flex justify-content-center">
+                        <button class="platformButton">Acceso a la plataforma</button>  
+                    </div>
                 </div>
-                <div class="platformAccess">
-                    <button class="platformButton">Acceso a la plataforma</button>  
-                </div>
-            </div>
-            <nav>
-                <ul class="navList">
-                    <li class="nav__link"><a class="nav__link--index" href="index.html">Home</a></li>
-                    <li class="nav__link"><a class="nav__link--prestadores" href="prestadores.html">Prestadores</a></li>
-                    <li class="nav__link"><a class="nav__link--asociarse" href="asociarse.html">Asociarse</a></li>
-                    <li class="nav__link"><a class="nav__link--nosotros" href="nosotros.html">Nosotros</a></li>
-                    <li class="nav__link"><a class="nav__link--contact" href="contact.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
+                                <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contacto</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
         <!-- Main -->
         <main class="mainContact">
             <div class="contactDiv">
